--- a/revizoodle-client/public/index.html
+++ b/revizoodle-client/public/index.html
@@ -19,7 +19,7 @@
   });
 
     </script>
-    <script async src="https://cdn.jsdelivr.net/npm/mathjax@2/MathJax.js?config=TeX-AMS-MML_CHTML"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-AMS_HTML"></script>
 </head>
 <body>
 <noscript>
