Moodle latex inline with $$

--- a/revizoodle-client/public/index.html
+++ b/revizoodle-client/public/index.html
@@ -11,8 +11,8 @@
     extensions: ["tex2jax.js"],
     jax: ["input/TeX", "output/HTML-CSS"],
     tex2jax: {
-      inlineMath: [ ['$','$'] ],
-      displayMath: [ ['$$','$$'] ],
+      inlineMath: [ ['$$','$$'] ],
+      displayMath: [ ['$$$','$$$'] ],
       processEscapes: false
     },
     "HTML-CSS": { fonts: ["TeX"] }
