MathJax : use also \( ... \) notation

--- a/revizoodle-client/public/index.html
+++ b/revizoodle-client/public/index.html
@@ -13,7 +13,7 @@
     extensions: ["tex2jax.js", "mml2jax.js","asciimath2jax.js","MathMenu.js","MathZoom.js", "fast-preview.js", "AssistiveMML.js", "a11y/accessibility-menu.js"],
     jax: ["input/TeX", "output/HTML-CSS"],
     tex2jax: {
-      inlineMath: [ ['$$','$$'] ],
+      inlineMath: [ ['$$','$$'], ['\\(', '\\)'] ],
       displayMath: [ ['$$$','$$$'] ],
       processEscapes: false
     },
